[package]
name = "futures-executor"
edition = "2018"
version = "0.3.5"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/futures-rs"
homepage = "https://rust-lang.github.io/futures-rs"
documentation = "https://docs.rs/futures-executor/0.3.5"
description = """
Executors for asynchronous tasks based on the futures-rs library.
"""

[features]
default = ["std"]
std = ["futures-core/std", "futures-task/std", "futures-util/std"]
thread-pool = ["std" ]

[dependencies]
futures-core = { path = "../futures-core", version = "0.3.5", default-features = false }
futures-task = { path = "../futures-task", version = "0.3.5", default-features = false }
futures-util = { path = "../futures-util", version = "0.3.5", default-features = false }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.2", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[dev-dependencies]
futures = { path = "../futures", version = "0.3.5" }

[package.metadata.docs.rs]
all-features = true
