[package]
name = "futures-sink"
edition = "2018"
version = "0.3.5"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/futures-rs"
homepage = "https://rust-lang.github.io/futures-rs"
documentation = "https://docs.rs/futures-sink/0.3.5"
description = """
The asynchronous `Sink` trait for the futures-rs library.
"""

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[package.metadata.docs.rs]
all-features = true
