[package]
name = "futures-task"
edition = "2018"
version = "0.3.5"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/futures-rs"
homepage = "https://rust-lang.github.io/futures-rs"
documentation = "https://docs.rs/futures-task/0.3.5"
description = """
Tools for working with tasks.
"""

[features]
default = ["std"]
std = ["alloc", "once_cell"]
alloc = []

# Unstable features
# These features are outside of the normal semver guarantees and require the
# `unstable` feature as an explicit opt-in to unstable API.
unstable = []
cfg-target-has-atomic = []

[dependencies]
once_cell = {git="https://github.com/lengyijun/once_cell/", default-features = false, features = ["std"], optional = true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[dev-dependencies]
futures = { path = "../futures", version = "0.3.5" }

[package.metadata.docs.rs]
all-features = true
