[package]
name = "futures-util"
edition = "2018"
version = "0.3.5"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/futures-rs"
homepage = "https://rust-lang.github.io/futures-rs"
documentation = "https://docs.rs/futures-util/0.3.5"
description = """
Common utilities and extension traits for the futures-rs library.
"""

[features]
default = ["std", "async-await", "async-await-macro"]
std = ["alloc", "futures-core/std", "futures-task/std", "slab"]
alloc = ["futures-core/alloc", "futures-task/alloc"]
async-await = []
async-await-macro = ["async-await", "futures-macro", "proc-macro-hack", "proc-macro-nested"]
compat = ["std", "futures_01"]
io-compat = ["io", "compat", "tokio-io"]
sink = ["futures-sink"]
io = ["std", "futures-io", "memchr"]
channel = ["std", "futures-channel"]

# Unstable features
# These features are outside of the normal semver guarantees and require the
# `unstable` feature as an explicit opt-in to unstable API.
unstable = ["futures-core/unstable", "futures-task/unstable"]
cfg-target-has-atomic = ["futures-core/cfg-target-has-atomic", "futures-task/cfg-target-has-atomic"]
bilock = []
read-initializer = ["io", "futures-io/read-initializer", "futures-io/unstable"]
write-all-vectored = ["io"]

[dependencies]
futures-core = { path = "../futures-core",  default-features = false }
futures-task = { path = "../futures-task",  default-features = false }
futures-channel = { path = "../futures-channel",  default-features = false, features = ["std"], optional = true }
futures-io = { path = "../futures-io",  default-features = false, features = ["std"], optional = true }
futures-sink = { path = "../futures-sink",  default-features = false, optional = true }
futures-macro = { path = "../futures-macro", default-features = false, optional = true }
proc-macro-hack = { version = "0.5.9", optional = true }
proc-macro-nested = { version = "0.1.2", optional = true }
slab = { git = "https://github.com/mesalock-linux/slab-sgx", branch = "master" ,optional=true}
memchr = { git = "https://github.com/mesalock-linux/rust-memchr-sgx", branch = "master" ,optional=true}
futures_01 = { version = "0.1.25", optional = true, package = "futures" }
tokio-io = { version = "0.1.9", optional = true }
pin-utils = "0.1.0"
pin-project = "0.4.20"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[dev-dependencies]
futures = { path = "../futures", version = "0.3.5", features = ["async-await", "thread-pool"] }
tokio = "0.1.11"

[package.metadata.docs.rs]
all-features = true
